--- a/desafio 10- Android/style.css
+++ b/desafio 10- Android/style.css
@@ -44,6 +44,23 @@ header{
     padding: 40px;
 }
 
+span#burguer{
+    display:block;
+    text-align: right;
+    background-color: var(--cor5);
+    color:white;
+    font-size:2em;
+    padding:10px;
+    cursor:pointer;
+ }
+ 
+ span#burguer:hover {
+    background-color: var(--cor1);
+    color:var(--cor5);
+    font-size:2.3em;
+    font-weight: bolder;
+ }
+
 header > h1{
     color: white;
     font-family: var(--fonte-destaque);
@@ -66,9 +83,11 @@ header > p{
 }
 
 nav{
+    display: none;
     background-color: var(--cor5);
     padding: 10px;
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.384);
+    
 }
 
 nav > a {
@@ -78,6 +97,9 @@ nav > a {
     text-decoration: none;
     font-weight: bold;
     transition: 0.5s;
+    display: block;
+    text-align: center;
+    
 }
 
 nav > a:hover {
@@ -198,7 +220,7 @@ footer{
     text-align: center;
     font-size: 0.9em;
     padding: 10px;
-    padding-bottom: 14px;
+    padding-bottom: 25px;
     margin-bottom: 13px;
 }
 
